@@ -1,12 +1,13 @@
 package com.mall.security;
 
-import com.mall.domain.entity.UmsMember;
+import com.mall.member.entity.UmsMember;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Getter
 public class MemberDetails implements UserDetails {
@@ -21,8 +22,9 @@ public class MemberDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // 用户权限后面 RBAC 再做
-        return Collections.emptyList();
+        return List.of(
+                new SimpleGrantedAuthority("ROLE_MEMBER")
+        );
     }
 
     @Override
